Change method name intoMarks to toMarks, and write more tests

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 <script>
     (function() {
         var pinyinWithNumbers = 'tai2 wan1',
-            pinyinWithMarks = Pinyinize.intoMarks(pinyinWithNumbers);
+            pinyinWithMarks = Pinyinize.toMarks(pinyinWithNumbers);
 
         document.write('<strong>' + pinyinWithNumbers + '</strong> turns into <strong>' + pinyinWithMarks + '</strong>.');
     })();
